Object pada JavaScript

--- a/Fungsi/index.html
+++ b/Fungsi/index.html
@@ -15,7 +15,8 @@
         }
 
         console.log(kalikanAngka(2, 3));
-        document.getElementById("data").innerHTML = kalikanAngka(2, 3);
+        console.log(kalikanAngka(5,10))
+        document.getElementById("data").innerHTML = "Hasil Perkalian : "+kalikanAngka(10, 10);
     </script>
   </body>
 </html>
